# herd-ticket-linear

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
herd_ticket_linear/: __init__.py  adapter.py
tests/: test_adapter.py
