[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herd-ticket-linear"
version = "0.0.1"
description = "Herd ticket lifecycle adapter for Linear."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Faust Eriksen" }
]
keywords = [
    "ai", "agents", "governance", "herd", "linear", "project-management",
    "ticket-adapter", "issue-tracking"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "herd-core>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/dbt-conceptual/herd-ticket-linear"
Repository = "https://github.com/dbt-conceptual/herd-ticket-linear"
Issues = "https://github.com/dbt-conceptual/herd-ticket-linear/issues"
